# symbolic-stack-machines

./: Cargo.toml  build-test-data.sh
contrib/tests/: example.rs  simple_lang.rs
src/: calldata.rs  lib.rs  main.rs  misc.rs  test_data.rs  utils.rs
src/environment/: env.rs
src/instructions/: convert.rs  mod.rs
src/machine/: assertions.rs  check_post_condition.rs  mem_ptr.rs  mod.rs  revert.rs  run_sym_inc.rs  run_sym_solve_at_each_branch.rs  (+2 more)
test-data/: CalldataBeyondCalldataSize.bin-runtime  CalldataBeyondCalldataSize.sol  Deposit.bin-runtime  DepositContractLoop.sol  FunctionDispatch.bin-runtime  FunctionDispatch.sol  KeccakConcreteAndSymAgree.bin-runtime  KeccakConcreteAndSymAgree.sol  KeccakInjectivity.bin-runtime  KeccakInjectivity.sol  KeccakInjectivity64Bytes.bin-runtime  KeccakInjectivity64bytes.sol  KeccakSoundness.bin-runtime  KeccakSoundness.sol  MultipleContract.sol  MultipleContracts2.sol  MultipleContracts2Callee.bin-runtime  MultipleContracts2Caller.bin-runtime  MultipleContractsCallee.bin-runtime  MultipleContractsCaller.bin-runtime  Neg.yul  PrimalityCheck.bin-runtime  PrimalityCheck.sol  ReturnConstant.bin-runtime  ReturnConstant.sol  ReturnSymbolic.bin-runtime  ReturnSymbolic.sol  SafeAdd.bin-runtime  SafeAdd.sol  SafeMathDistributivitySol.bin-runtime  SafeMathDistributivitySol.sol  SafeMathDistributivityYul.bin-runtime  StorageCollisions.bin-runtime  StorageCollisions.sol  StorageWrites.bin-runtime  StorageWrites.sol
tests/: hevm.rs  mem.rs  optimizations.rs  primality_check.rs  return_test.rs  simple_lang.rs  tests.rs  word.rs  z3.rs
(+14 files in other folders)
