[package]
name = "symbolic-stack-machines"
version = "0.1.0"
edition = "2021"
authors = ["Tannr Allard <tannr@hey.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
hex = "0.4.3"
rand = "0.8.5"
serde = {version = "1.0.136", features = ["derive"], default-features = true}
thiserror = "1.0.30"
z3 = "0.11.2"
im = "15.1.0"
primitive-types = "0.11.1"
log = "0.4.17"
env_logger = "0.9.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
itertools = "0.10.2"
